alignment corrected

--- a/estilo.css
+++ b/estilo.css
@@ -3,24 +3,25 @@
     width:150;
     height:150;
     
-    background: linear-gradient(#c3eaf0,#4bb0c2);
+    background: linear-gradient(#c3eaf0,#2a6dd1);
     font-size: 80px;
-    font-family: "Comic Sans MS";
+    
     border: none;
     border-radius:30%;
+    
 }
 
 h1
 {
-    background: linear-gradient(to left,#2cc4d8,#AED6F1);
-    font-family: "Algerian";
+    background: linear-gradient(to left,#2a6dd1,#AED6F1);
+    font-family: "Montserrat";
     color:#FFFFFF;
     text-shadow:  10px 10px 10px rgb(44, 41, 41) ;/* x,y,spread,color*/
     font-size:60px;
     text-align: center;
     border: none;
     border-radius: 50px;
-    margin:auto;
+    
     
 }
 body
@@ -44,34 +45,28 @@ body
 {
     margin:auto;
     font-size:0px;
+    width:50%;
     
-    transform: translateX(-50%);
-    min-width:460px;
-    min-height: 700px;
+    min-width:450px;
+    max-width: 450px;
     
 }
 #reload
 {
     font-size: 65;
-    width: 460;
-    height: 100;
-    position: absolute;
-    background: linear-gradient(#eefdfa,#db2434,#111111);
-    font-family:"Algerian";
-    border: none;
-    border-radius: 60%;
     margin:auto;
+    width: 100%;
+    height: 100;
+    color:white;
+    background: linear-gradient(#eefdfa,#db2434,#111111);
+    font-family:"Montserrat";
+    border: none;
+    border-radius: 50px;
+    
     
     
 }
-#lines
-{
-    position:absolute;
-    top: 160px;
-    width: 450px;
-    height: 450px;
-    background-color:rgba(30,0,0,0);
-}
+
 #reload:hover{
     box-shadow: 0px 0px 80px rgb(230, 28, 28);
 }
